--- a/public/assets/css/cards.css
+++ b/public/assets/css/cards.css
@@ -1,26 +1,38 @@
 body{
     background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(../img/one-piece2.jpg);
     background-size: cover;
-    background-repeat: no-repeat;
+    font-family: sans-serif;
 }
 .cards{
     display: flex;
-    width: 100%;
     justify-content: space-around;
     margin-top: 1%;
     flex-wrap: wrap;
 }
 .card{
-    width: 18em;
+    width: 270px;
+    margin: 2%;
     min-height: 300px;
     background-color: rgba(154, 154, 154, 0.5);
-    border-radius: 5% 5% 0% 0%;
+    border-radius: 5% 5% 5% 5%;
+    margin-bottom: 1%;
 }
-.imgCard{
+img{
     width: 100%;
     border-radius: 5% 5% 0% 0%;
     filter: grayscale(100%);
 }
 img:hover{
     filter: grayscale(0%);
+}
+.gold{
+    background: linear-gradient(135deg, rgba(252,234,188,1) 0%,rgba(252,206,78,1) 50%,rgba(248,182,0,1) 51%,rgba(251,223,147,1) 100%);
+}
+h2{
+    text-align: center;
+}
+p{
+    text-align: center;
+    height: 180px;
+    overflow: auto;
 }
